--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DB_HOST=db
+      - DB_HOST=${DB_HOST}
       - DB_NAME=${DB_NAME}
       - DB_USER=${DB_USER}
       - DB_PASS=${DB_PASS}
@@ -19,7 +19,6 @@ services:
       - ENVIRONMENT=${ENVIRONMENT}
     depends_on:
       - db
-      - redis
 
   db:
     image: postgres:15-alpine
