--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Django==5.2.9
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
+django-cors-headers==4.3.1
 hyperlink==21.0.0
 idna==3.11
 Incremental==24.11.0
