--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,8 @@ djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 djoser==2.3.3
 django-cors-headers==4.3.1
+django-storages==1.14.2
+boto3==1.34.34
 hyperlink==21.0.0
 idna==3.11
 Incremental==24.11.0
