--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,9 @@ djoser==2.3.3
 django-cors-headers==4.3.1
 django-storages==1.14.2
 boto3==1.34.34
+pdfplumber==0.11.0
+python-docx==1.1.0
+PyPDF2==3.0.1
 hyperlink==21.0.0
 idna==3.11
 Incremental==24.11.0
