--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ boto3==1.34.34
 pdfplumber==0.11.0
 python-docx==1.1.0
 PyPDF2==3.0.1
+google-generativeai==0.3.2
 hyperlink==21.0.0
 idna==3.11
 Incremental==24.11.0
